--- a/free-nodes/page-4.htm
+++ b/free-nodes/page-4.htm
@@ -94,6 +94,20 @@
             <!-- welcome -->
                         <div class="welcome">
                 <div class="col-md-3 agileits_welcome_grid_right">
+                    <a href="/free-nodes/2024-4-14-free-clash.htm">
+                        <img src="/uploads/20240228/c38971d27f34eb1a1231acac753c4fee.webp" alt="4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接" class="img-responsive" />
+                    </a>
+                </div>
+                <div class="col-md-9 agileits_welcome_grid_left">
+                    <a href="/free-nodes/2024-4-14-free-clash.htm">
+                        <h3>4月14日→20.8M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接</h3>
+                    </a>
+                    <p>这一次的节点更新覆盖了韩国、新加坡、欧洲、加拿大、日本、美国、香港等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+                        <div class="welcome">
+                <div class="col-md-3 agileits_welcome_grid_right">
                     <a href="/free-nodes/2024-4-13-free-clash.htm">
                         <img src="/uploads/20240228/462333cdd7156cdfce9b23a70ece7cac.webp" alt="4月13日→20.9M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接" class="img-responsive" />
                     </a>
@@ -218,20 +232,6 @@
                 </div>
                 <div class="clearfix"> </div>
             </div>
-                        <div class="welcome">
-                <div class="col-md-3 agileits_welcome_grid_right">
-                    <a href="/free-nodes/2024-4-4-free-clash-subscribe.htm">
-                        <img src="/uploads/20240228/4869d04d2811d27431cc2b8e7d9bab5c.webp" alt="4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接" class="img-responsive" />
-                    </a>
-                </div>
-                <div class="col-md-9 agileits_welcome_grid_left">
-                    <a href="/free-nodes/2024-4-4-free-clash-subscribe.htm">
-                        <h3>4月4日→21.3M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接</h3>
-                    </a>
-                    <p>这一次的节点更新覆盖了美国、香港、加拿大、新加坡、日本、欧洲、韩国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
                         <ul class="pagination"><li><a href="/free-nodes/page-3.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li class="active"><span>4</span></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li> <li><a href="/free-nodes/page-5.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
         <div class="col-md-3">
@@ -241,6 +241,7 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
+                        <li class="py-2"><a href="/free-nodes/2024-5-14-free-high-speed-nodes.htm" title="5月14日→20.2M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月14日→20.2M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-13-shadowrocket-node.htm" title="5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月13日→19.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-12-free-ssr-node.htm" title="5月12日→19.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址">5月12日→19.8M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-11-free-clash.htm" title="5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月11日→22.4M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
@@ -250,7 +251,6 @@
                         <li class="py-2"><a href="/free-nodes/2024-5-7-free-subscribe-node.htm" title="5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月7日→21.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-6-node-share.htm" title="5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">5月6日→19.6M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm" title="5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm" title="5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
